syntax = "proto3";

package product.v0;

import "google/protobuf/timestamp.proto";

option go_package = "vitainmove.com/product-service-go/proto/product/v0;productpb";

message Product{
    string id = 1;
    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;
    string name = 4;
    string description = 5;
    float price = 6;
    string image_url = 7;
    int32 amount = 8;
    string product_type = 9;
    bool shipping_required = 10;
}

message GetProductRequest{
    string id = 1;
}

message GetProductResponse{
    Product product = 1;
}

message ListProductsRequest{
    int32 limit = 1;
    int32 offset = 2;
}

message ListProductsResponse{
    repeated Product products = 1;
    int64 total = 2;
}

message ListProductsByTypeRequest{
    string product_type = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message ListProductsByTypeResponse{
    repeated Product products = 1;
    int64 total = 2;
}

message CreateProductRequest{
    string name = 1;
    string description = 2;
    float price = 3;
    string image_url = 4;
    int32 amount = 5;
    string product_type = 6;
    bool shipping_required = 7;
}

message CreateProductResponse{
    Product product = 1;
}

message UpdateProductRequest{
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    string image_url = 5;
    int32 amount = 6;
    string product_type = 7;
    bool shipping_required = 8;
}

message UpdateProductResponse{
    Product product = 1;
}

message DeleteProductRequest{
    string id = 1;
}

message DeleteProductResponse{
    string id = 1;
}

service ProductService{
    rpc GetProduct(GetProductRequest) returns (GetProductResponse) {}
    rpc ListProductsByType(ListProductsByTypeRequest) returns (ListProductsByTypeResponse) {}
    rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {}
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
    rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse) {}
    rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {}
}